--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84a3fad2",
+   "id": "502b3401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# Function to extract Staff ID using regular expression\n",
+    "def extract_staff_id(action_owner):\n",
+    "    match = re.search(r'\\((\\d{8})\\)', action_owner)\n",
+    "    return match.group(1) if match else None\n",
+    "\n",
+    "# Load the Excel file into a DataFrame\n",
+    "df = pd.read_excel('path_to_your_file.xlsx')\n",
+    "\n",
+    "# Extract Staff ID from \"Action Owner\" column\n",
+    "df['Staff ID'] = df['Action Owner'].apply(extract_staff_id)\n",
+    "\n",
+    "# Display the DataFrame with the new column\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6e6d571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da0fdbe6",
+   "id": "934fc136",
    "metadata": {},
    "outputs": [],
    "source": [
