--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "502b3401",
+   "id": "ab3df114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,23 +12,38 @@
     "\n",
     "# Function to extract Staff ID using regular expression\n",
     "def extract_staff_id(action_owner):\n",
-    "    match = re.search(r'\\((\\d{8})\\)', action_owner)\n",
-    "    return match.group(1) if match else None\n",
+    "    if isinstance(action_owner, str):\n",
+    "        match = re.search(r'\\((\\d{8})\\)', action_owner)\n",
+    "        return match.group(1) if match else None\n",
+    "    return None\n",
     "\n",
     "# Load the Excel file into a DataFrame\n",
     "df = pd.read_excel('path_to_your_file.xlsx')\n",
     "\n",
-    "# Extract Staff ID from \"Action Owner\" column\n",
-    "df['Staff ID'] = df['Action Owner'].apply(extract_staff_id)\n",
+    "# Ensure \"Action Owner\" column is treated as string\n",
+    "df['Action Owner'] = df['Action Owner'].astype(str)\n",
     "\n",
-    "# Display the DataFrame with the new column\n",
-    "print(df)\n"
+    "# Filter the DataFrame for rows where 'Issue Status' is 'open'\n",
+    "open_issues_df = df[df['Issue Status'] == 'open']\n",
+    "\n",
+    "# Extract Staff ID from \"Action Owner\" column for filtered rows\n",
+    "open_issues_df['Staff ID'] = open_issues_df['Action Owner'].apply(extract_staff_id)\n",
+    "\n",
+    "# Create a new DataFrame with the required columns\n",
+    "result_df = open_issues_df[['Staff ID', 'Issue']].copy()\n",
+    "result_df.rename(columns={'Issue': 'Record Type'}, inplace=True)\n",
+    "result_df['Record ID'] = open_issues_df['Issue ID']\n",
+    "result_df['Record Name'] = open_issues_df['Issue Title']\n",
+    "result_df['Record Details'] = open_issues_df['Issue Description']\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(result_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e6d571",
+   "id": "8000b576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "934fc136",
+   "id": "c44e515f",
    "metadata": {},
    "outputs": [],
    "source": [
