--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab3df114",
+   "id": "9e7d8b62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,16 @@
     "# Extract Staff ID from \"Action Owner\" column for filtered rows\n",
     "open_issues_df['Staff ID'] = open_issues_df['Action Owner'].apply(extract_staff_id)\n",
     "\n",
-    "# Create a new DataFrame with the required columns\n",
-    "result_df = open_issues_df[['Staff ID', 'Issue']].copy()\n",
-    "result_df.rename(columns={'Issue': 'Record Type'}, inplace=True)\n",
-    "result_df['Record ID'] = open_issues_df['Issue ID']\n",
-    "result_df['Record Name'] = open_issues_df['Issue Title']\n",
-    "result_df['Record Details'] = open_issues_df['Issue Description']\n",
+    "# Add the 'Record Type' column with value 'Issue'\n",
+    "open_issues_df['Record Type'] = 'Issue'\n",
+    "\n",
+    "# Create the final DataFrame with the required columns\n",
+    "result_df = open_issues_df[['Staff ID', 'Record Type', 'Issue ID', 'Issue Title', 'Issue Description']]\n",
+    "result_df.rename(columns={\n",
+    "    'Issue ID': 'Record ID',\n",
+    "    'Issue Title': 'Record Name',\n",
+    "    'Issue Description': 'Record Details'\n",
+    "}, inplace=True)\n",
     "\n",
     "# Display the final DataFrame\n",
     "print(result_df)\n"
@@ -43,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8000b576",
+   "id": "c78913ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c44e515f",
+   "id": "98cc3c52",
    "metadata": {},
    "outputs": [],
    "source": [
