--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,131 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e7d8b62",
+   "id": "23079ddb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "def extract_staff_id(action_owner_col):\n",
+    "    \"\"\"Extract Staff ID from the given column using regex.\"\"\"\n",
+    "    if isinstance(action_owner_col, str):\n",
+    "        match = re.search(r'\\((\\d{8})\\)', action_owner_col)\n",
+    "        return match.group(1) if match else None\n",
+    "    return None\n",
+    "\n",
+    "def process_file(file_path, staff_id_col, issue_status_col, filter_condition,\n",
+    "                 record_id_col, record_name_col, record_details_col):\n",
+    "    \"\"\"\n",
+    "    Process a single file to extract relevant data and transform it into a standardized format.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        file_path (str): Path to the input Excel file.\n",
+    "        staff_id_col (str): Column name for the Staff ID extraction.\n",
+    "        issue_status_col (str): Column name for filtering records.\n",
+    "        filter_condition (str): Value to filter the records (e.g., 'open').\n",
+    "        record_id_col (str): Column name for 'Record ID'.\n",
+    "        record_name_col (str): Column name for 'Record Name'.\n",
+    "        record_details_col (str): Column name for 'Record Details'.\n",
+    "    \n",
+    "    Returns:\n",
+    "        pd.DataFrame: Processed DataFrame with standardized columns.\n",
+    "    \"\"\"\n",
+    "    # Load the Excel file into a DataFrame\n",
+    "    df = pd.read_excel(file_path)\n",
+    "    \n",
+    "    # Ensure the staff ID column is treated as string\n",
+    "    df[staff_id_col] = df[staff_id_col].astype(str)\n",
+    "    \n",
+    "    # Filter the DataFrame based on the provided condition\n",
+    "    filtered_df = df[df[issue_status_col] == filter_condition]\n",
+    "    \n",
+    "    # Extract Staff ID from the specified column\n",
+    "    filtered_df['Staff ID'] = filtered_df[staff_id_col].apply(extract_staff_id)\n",
+    "    \n",
+    "    # Add the 'Record Type' column with the value 'Issue'\n",
+    "    filtered_df['Record Type'] = 'Issue'\n",
+    "    \n",
+    "    # Create the final DataFrame with the required columns\n",
+    "    result_df = filtered_df[[staff_id_col, record_id_col, record_name_col, record_details_col]].copy()\n",
+    "    result_df.rename(columns={\n",
+    "        staff_id_col: 'Staff ID',\n",
+    "        record_id_col: 'Record ID',\n",
+    "        record_name_col: 'Record Name',\n",
+    "        record_details_col: 'Record Details'\n",
+    "    }, inplace=True)\n",
+    "    \n",
+    "    # Add the 'Record Type' column\n",
+    "    result_df['Record Type'] = 'Issue'\n",
+    "    \n",
+    "    # Return the result DataFrame\n",
+    "    return result_df\n",
+    "\n",
+    "def process_multiple_files(file_paths, column_mapping, filter_condition):\n",
+    "    \"\"\"\n",
+    "    Process multiple files and concatenate the results into a single DataFrame.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        file_paths (list of str): List of paths to input Excel files.\n",
+    "        column_mapping (list of dict): List of dictionaries with column mappings for each file.\n",
+    "        filter_condition (str): Value to filter records (e.g., 'open').\n",
+    "    \n",
+    "    Returns:\n",
+    "        pd.DataFrame: Concatenated DataFrame with results from all files.\n",
+    "    \"\"\"\n",
+    "    all_dfs = []\n",
+    "    \n",
+    "    for file_path, columns in zip(file_paths, column_mapping):\n",
+    "        df = process_file(\n",
+    "            file_path,\n",
+    "            staff_id_col=columns['staff_id'],\n",
+    "            issue_status_col=columns['issue_status'],\n",
+    "            filter_condition=filter_condition,\n",
+    "            record_id_col=columns['record_id'],\n",
+    "            record_name_col=columns['record_name'],\n",
+    "            record_details_col=columns['record_details']\n",
+    "        )\n",
+    "        all_dfs.append(df)\n",
+    "    \n",
+    "    # Concatenate all DataFrames\n",
+    "    final_df = pd.concat(all_dfs, ignore_index=True)\n",
+    "    \n",
+    "    return final_df\n",
+    "\n",
+    "# Example usage\n",
+    "file_paths = [\n",
+    "    'path_to_file1.xlsx',\n",
+    "    'path_to_file2.xlsx',\n",
+    "    'path_to_file3.xlsx',\n",
+    "    'path_to_file4.xlsx',\n",
+    "    'path_to_file5.xlsx'\n",
+    "]\n",
+    "\n",
+    "column_mapping = [\n",
+    "    {\n",
+    "        'staff_id': 'Action Owner',  # Column name to extract Staff ID\n",
+    "        'issue_status': 'Issue Status',  # Column name for issue status\n",
+    "        'record_id': 'Issue ID',  # Column name for Record ID\n",
+    "        'record_name': 'Issue Title',  # Column name for Record Name\n",
+    "        'record_details': 'Issue Description'  # Column name for Record Details\n",
+    "    },\n",
+    "    # Add mappings for other files here\n",
+    "]\n",
+    "\n",
+    "filter_condition = 'open'  # Condition to filter records\n",
+    "\n",
+    "# Process multiple files and get the final DataFrame\n",
+    "final_df = process_multiple_files(file_paths, column_mapping, filter_condition)\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(final_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "143c53ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c78913ab",
+   "id": "82f56faa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98cc3c52",
+   "id": "e92325a5",
    "metadata": {},
    "outputs": [],
    "source": [
