--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,134 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23079ddb",
+   "id": "1c5fd226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "def extract_staff_id(action_owner_col):\n",
+    "    \"\"\"Extract Staff ID from the given column using regex.\"\"\"\n",
+    "    if isinstance(action_owner_col, str):\n",
+    "        match = re.search(r'\\((\\d{8})\\)', action_owner_col)\n",
+    "        return match.group(1) if match else None\n",
+    "    return None\n",
+    "\n",
+    "def process_single_file(file_path, staff_id_col, issue_status_col, filter_condition,\n",
+    "                        record_id_col, record_name_col, record_details_col, record_type_value):\n",
+    "    \"\"\"\n",
+    "    Process a single file to extract relevant data and transform it into a standardized format.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        file_path (str): Path to the input Excel file.\n",
+    "        staff_id_col (str): Column name for the Staff ID extraction.\n",
+    "        issue_status_col (str): Column name for filtering records.\n",
+    "        filter_condition (str): Value to filter the records (e.g., 'open').\n",
+    "        record_id_col (str): Column name for 'Record ID'.\n",
+    "        record_name_col (str): Column name for 'Record Name'.\n",
+    "        record_details_col (str): Column name for 'Record Details'.\n",
+    "        record_type_value (str): Value to be placed in 'Record Type' column.\n",
+    "    \n",
+    "    Returns:\n",
+    "        pd.DataFrame: Processed DataFrame with standardized columns.\n",
+    "    \"\"\"\n",
+    "    # Load the Excel file into a DataFrame\n",
+    "    df = pd.read_excel(file_path)\n",
+    "    \n",
+    "    # Ensure the staff ID column is treated as string\n",
+    "    df[staff_id_col] = df[staff_id_col].astype(str)\n",
+    "    \n",
+    "    # Filter the DataFrame based on the provided condition\n",
+    "    filtered_df = df[df[issue_status_col] == filter_condition]\n",
+    "    \n",
+    "    # Extract Staff ID from the specified column\n",
+    "    filtered_df['Staff ID'] = filtered_df[staff_id_col].apply(extract_staff_id)\n",
+    "    \n",
+    "    # Add the 'Record Type' column with the specified value\n",
+    "    filtered_df['Record Type'] = record_type_value\n",
+    "    \n",
+    "    # Create the final DataFrame with the required columns\n",
+    "    result_df = filtered_df[[record_id_col, record_name_col, record_details_col]].copy()\n",
+    "    result_df.rename(columns={\n",
+    "        record_id_col: 'Record ID',\n",
+    "        record_name_col: 'Record Name',\n",
+    "        record_details_col: 'Record Details'\n",
+    "    }, inplace=True)\n",
+    "    \n",
+    "    # Add 'Staff ID' and 'Record Type' columns\n",
+    "    result_df['Staff ID'] = filtered_df['Staff ID']\n",
+    "    result_df['Record Type'] = filtered_df['Record Type']\n",
+    "    \n",
+    "    # Return the result DataFrame\n",
+    "    return result_df\n",
+    "\n",
+    "def concatenate_files(file_params_list):\n",
+    "    \"\"\"\n",
+    "    Process multiple files and concatenate the results into a single DataFrame.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        file_params_list (list of dict): List of dictionaries with parameters for each file.\n",
+    "    \n",
+    "    Returns:\n",
+    "        pd.DataFrame: Concatenated DataFrame with results from all files.\n",
+    "    \"\"\"\n",
+    "    all_dfs = []\n",
+    "    \n",
+    "    for params in file_params_list:\n",
+    "        df = process_single_file(\n",
+    "            file_path=params['file_path'],\n",
+    "            staff_id_col=params['staff_id_col'],\n",
+    "            issue_status_col=params['issue_status_col'],\n",
+    "            filter_condition=params['filter_condition'],\n",
+    "            record_id_col=params['record_id_col'],\n",
+    "            record_name_col=params['record_name_col'],\n",
+    "            record_details_col=params['record_details_col'],\n",
+    "            record_type_value=params['record_type_value']\n",
+    "        )\n",
+    "        all_dfs.append(df)\n",
+    "    \n",
+    "    # Concatenate all DataFrames\n",
+    "    final_df = pd.concat(all_dfs, ignore_index=True)\n",
+    "    \n",
+    "    return final_df\n",
+    "\n",
+    "# Example usage\n",
+    "file_params_list = [\n",
+    "    {\n",
+    "        'file_path': 'path_to_file1.xlsx',\n",
+    "        'staff_id_col': 'Action Owner',\n",
+    "        'issue_status_col': 'Issue Status',\n",
+    "        'filter_condition': 'open',\n",
+    "        'record_id_col': 'Issue ID',\n",
+    "        'record_name_col': 'Issue Title',\n",
+    "        'record_details_col': 'Issue Description',\n",
+    "        'record_type_value': 'Issue'\n",
+    "    },\n",
+    "    {\n",
+    "        'file_path': 'path_to_file2.xlsx',\n",
+    "        'staff_id_col': 'Owner',\n",
+    "        'issue_status_col': 'Status',\n",
+    "        'filter_condition': 'open',\n",
+    "        'record_id_col': 'ID',\n",
+    "        'record_name_col': 'Title',\n",
+    "        'record_details_col': 'Description',\n",
+    "        'record_type_value': 'Action Owner'\n",
+    "    },\n",
+    "    # Add parameters for other files here\n",
+    "]\n",
+    "\n",
+    "# Process multiple files and get the final DataFrame\n",
+    "final_df = concatenate_files(file_params_list)\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(final_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ec98d7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "143c53ed",
+   "id": "3c7f3285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82f56faa",
+   "id": "22c4ad97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e92325a5",
+   "id": "27b207f1",
    "metadata": {},
    "outputs": [],
    "source": [
