--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a6ef666",
+   "id": "9e6d6714",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def process_files(vnew_path, vold_path):\n",
+    "    # Read the Excel files into DataFrames\n",
+    "    vNew = pd.read_excel(vnew_path)\n",
+    "    vOld = pd.read_excel(vold_path)\n",
+    "    \n",
+    "    # Select necessary columns from vNew\n",
+    "    vNew_selected = vNew[['Employee ID', 'Position Number', 'BF Level 4']].copy()\n",
+    "    vNew_selected.rename(columns={\n",
+    "        'Position Number': 'new Position Number',\n",
+    "        'BF Level 4': 'new BF Level 4'\n",
+    "    }, inplace=True)\n",
+    "    \n",
+    "    # Select necessary columns from vOld\n",
+    "    vOld_selected = vOld[['Employee ID', 'Position Number', 'BF Level 4']].copy()\n",
+    "    vOld_selected.rename(columns={\n",
+    "        'Position Number': 'old Position Number',\n",
+    "        'BF Level 4': 'old BF Level 4'\n",
+    "    }, inplace=True)\n",
+    "    \n",
+    "    # Merge the DataFrames on Employee ID using left join\n",
+    "    merged_df = pd.merge(vOld_selected, vNew_selected, on='Employee ID', how='left')\n",
+    "    \n",
+    "    # Create the Position Changed column based on the specified conditions\n",
+    "    def determine_position_changed(row):\n",
+    "        if pd.isna(row['new Position Number']) and pd.isna(row['new BF Level 4']):\n",
+    "            return 'Left'\n",
+    "        elif (row['old Position Number'] != row['new Position Number']) or (row['old BF Level 4'] != row['new BF Level 4']):\n",
+    "            return 'Yes'\n",
+    "        else:\n",
+    "            return 'No Change'\n",
+    "    \n",
+    "    merged_df['Position Changed'] = merged_df.apply(determine_position_changed, axis=1)\n",
+    "    \n",
+    "    return merged_df\n",
+    "\n",
+    "# Example usage\n",
+    "vnew_path = 'path_to_vNew.xlsx'\n",
+    "vold_path = 'path_to_vOld.xlsx'\n",
+    "\n",
+    "final_df = process_files(vnew_path, vold_path)\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(final_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25a90052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3179a90c",
+   "id": "44941138",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e826a2b",
+   "id": "1de4e0c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56a668e0",
+   "id": "a8ed3172",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df0286a4",
+   "id": "d7749752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e2cbceb",
+   "id": "2c095c49",
    "metadata": {},
    "outputs": [],
    "source": [
