--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,86 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e6d6714",
+   "id": "b4e82670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def process_files(vnew_path, vold_path):\n",
+    "    # Read the Excel files into DataFrames\n",
+    "    vNew = pd.read_excel(vnew_path)\n",
+    "    vOld = pd.read_excel(vold_path)\n",
+    "    \n",
+    "    # Check and print initial dtypes of columns\n",
+    "    print(\"Initial dtypes of vNew:\")\n",
+    "    print(vNew.dtypes)\n",
+    "    print(\"\\nInitial dtypes of vOld:\")\n",
+    "    print(vOld.dtypes)\n",
+    "    \n",
+    "    # Function to convert columns to int, skipping invalid rows\n",
+    "    def convert_to_int(df, column):\n",
+    "        df[column] = pd.to_numeric(df[column], errors='coerce')\n",
+    "        df.dropna(subset=[column], inplace=True)\n",
+    "        df[column] = df[column].astype(int)\n",
+    "        return df\n",
+    "\n",
+    "    # Convert 'Employee ID' and 'Position Number' to integers\n",
+    "    vNew = convert_to_int(vNew, 'Employee ID')\n",
+    "    vNew = convert_to_int(vNew, 'Position Number')\n",
+    "    vOld = convert_to_int(vOld, 'Employee ID')\n",
+    "    vOld = convert_to_int(vOld, 'Position Number')\n",
+    "    \n",
+    "    # Check and print dtypes of columns after coercion attempt\n",
+    "    print(\"\\nDtypes of vNew after coercion attempt:\")\n",
+    "    print(vNew.dtypes)\n",
+    "    print(\"\\nDtypes of vOld after coercion attempt:\")\n",
+    "    print(vOld.dtypes)\n",
+    "    \n",
+    "    # Select necessary columns from vNew\n",
+    "    vNew_selected = vNew[['Employee ID', 'Position Number', 'BF Level 4']].copy()\n",
+    "    vNew_selected.rename(columns={\n",
+    "        'Position Number': 'new Position Number',\n",
+    "        'BF Level 4': 'new BF Level 4'\n",
+    "    }, inplace=True)\n",
+    "    \n",
+    "    # Select necessary columns from vOld\n",
+    "    vOld_selected = vOld[['Employee ID', 'Position Number', 'BF Level 4']].copy()\n",
+    "    vOld_selected.rename(columns={\n",
+    "        'Position Number': 'old Position Number',\n",
+    "        'BF Level 4': 'old BF Level 4'\n",
+    "    }, inplace=True)\n",
+    "    \n",
+    "    # Merge the DataFrames on Employee ID using left join\n",
+    "    merged_df = pd.merge(vOld_selected, vNew_selected, on='Employee ID', how='left')\n",
+    "    \n",
+    "    # Create the Position Changed column based on the specified conditions\n",
+    "    def determine_position_changed(row):\n",
+    "        if pd.isna(row['new Position Number']) and pd.isna(row['new BF Level 4']):\n",
+    "            return 'Left'\n",
+    "        elif (row['old Position Number'] != row['new Position Number']) or (row['old BF Level 4'] != row['new BF Level 4']):\n",
+    "            return 'Yes'\n",
+    "        else:\n",
+    "            return 'No Change'\n",
+    "    \n",
+    "    merged_df['Position Changed'] = merged_df.apply(determine_position_changed, axis=1)\n",
+    "    \n",
+    "    return merged_df\n",
+    "\n",
+    "# Example usage\n",
+    "vnew_path = 'path_to_vNew.xlsx'\n",
+    "vold_path = 'path_to_vOld.xlsx'\n",
+    "\n",
+    "final_df = process_files(vnew_path, vold_path)\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(final_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ef4c202",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25a90052",
+   "id": "5d2c92b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44941138",
+   "id": "96028352",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1de4e0c3",
+   "id": "80ea7d87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ed3172",
+   "id": "6483197c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7749752",
+   "id": "df70578d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c095c49",
+   "id": "978b4ff2",
    "metadata": {},
    "outputs": [],
    "source": [
