--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "531c7659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def lookup_and_merge(file1_path, file2_path):\n",
+    "    # Read the first file into a DataFrame\n",
+    "    df1 = pd.read_excel(file1_path)\n",
+    "    \n",
+    "    # Read the second file into a DataFrame\n",
+    "    df2 = pd.read_excel(file2_path)\n",
+    "    \n",
+    "    # Ensure the Staff ID in both DataFrames are strings for accurate matching\n",
+    "    df1['Employee ID'] = df1['Employee ID'].astype(str)\n",
+    "    df2['Staff ID'] = df2['Staff ID'].astype(str)\n",
+    "    \n",
+    "    # Perform the lookup by merging the DataFrames on Staff ID and Employee ID\n",
+    "    merged_df = df2.merge(df1[['Employee ID', 'Position Changed']], \n",
+    "                          left_on='Staff ID', right_on='Employee ID', \n",
+    "                          how='left')\n",
+    "    \n",
+    "    # Drop the redundant 'Employee ID' column from the merged DataFrame\n",
+    "    merged_df.drop(columns=['Employee ID'], inplace=True)\n",
+    "    \n",
+    "    # Return the merged DataFrame\n",
+    "    return merged_df\n",
+    "\n",
+    "# Paths to the Excel files\n",
+    "file1_path = 'path_to_file1.xlsx'  # File with Employee ID, Position Changed, etc.\n",
+    "file2_path = 'path_to_file2.xlsx'  # File with Record ID, Record Name, Record Details, Staff ID\n",
+    "\n",
+    "# Perform the lookup and merge\n",
+    "final_df = lookup_and_merge(file1_path, file2_path)\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(final_df)\n",
+    "\n",
+    "# If needed, save the final DataFrame to a new Excel file\n",
+    "# final_df.to_excel('path_to_output_file.xlsx', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b4e82670",
    "metadata": {},
    "outputs": [],
@@ -78,6 +123,14 @@
     "# Display the final DataFrame\n",
     "print(final_df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bceda7e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
