--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "531c7659",
+   "id": "eda552e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def lookup_and_merge(file1_path, file2_path, vOld_path):\n",
+    "    # Read the first file into a DataFrame\n",
+    "    df1 = pd.read_excel(file1_path)\n",
+    "    \n",
+    "    # Read the second file into a DataFrame\n",
+    "    df2 = pd.read_excel(file2_path)\n",
+    "    \n",
+    "    # Read the vOld file into a DataFrame\n",
+    "    vOld = pd.read_excel(vOld_path)\n",
+    "    \n",
+    "    # Ensure the Staff ID in both DataFrames are treated as numeric for accurate matching\n",
+    "    df1['Employee ID'] = pd.to_numeric(df1['Employee ID'], errors='coerce').astype('Int64')\n",
+    "    df2['Staff ID'] = pd.to_numeric(df2['Staff ID'], errors='coerce').astype('Int64')\n",
+    "    vOld['Staff ID'] = pd.to_numeric(vOld['Staff ID'], errors='coerce').astype('Int64')\n",
+    "    \n",
+    "    # Perform the lookup by merging the DataFrames on Staff ID and Employee ID\n",
+    "    merged_df = df2.merge(df1[['Employee ID', 'Position Changed']], \n",
+    "                          left_on='Staff ID', right_on='Employee ID', \n",
+    "                          how='left')\n",
+    "    \n",
+    "    # Drop the redundant 'Employee ID' column from the merged DataFrame\n",
+    "    merged_df.drop(columns=['Employee ID'], inplace=True)\n",
+    "    \n",
+    "    # Filter the DataFrame to retain only rows where 'Position Changed' is 'Left' or 'Yes'\n",
+    "    filtered_df = merged_df[merged_df['Position Changed'].isin(['Left', 'Yes'])]\n",
+    "    \n",
+    "    # Ensure 'Staff ID' and 'Position Changed' columns are filled properly\n",
+    "    filtered_df['Staff ID'] = filtered_df['Staff ID'].fillna('No ID')\n",
+    "    filtered_df['Position Changed'] = filtered_df['Position Changed'].fillna('No Change')\n",
+    "    \n",
+    "    # Perform the second lookup by merging the filtered_df with vOld on Staff ID\n",
+    "    final_df = filtered_df.merge(vOld[['Staff ID', 'Employee Name', 'Employee Business Email Address', 'Global Career Band']], \n",
+    "                                 on='Staff ID', \n",
+    "                                 how='left')\n",
+    "    \n",
+    "    # Rename the fetched columns\n",
+    "    final_df.rename(columns={\n",
+    "        'Employee Name': 'Functional Manager Employee Name',\n",
+    "        'Employee Business Email Address': 'Functional Manager Email',\n",
+    "        'Global Career Band': 'Functional Manager GCB'\n",
+    "    }, inplace=True)\n",
+    "    \n",
+    "    # Return the final DataFrame\n",
+    "    return final_df\n",
+    "\n",
+    "# Paths to the Excel files\n",
+    "file1_path = 'path_to_file1.xlsx'  # File with Employee ID, Position Changed, etc.\n",
+    "file2_path = 'path_to_file2.xlsx'  # File with Record ID, Record Name, Record Details, Staff ID\n",
+    "vOld_path = 'path_to_vOld.xlsx'    # File with additional details based on Staff ID\n",
+    "\n",
+    "# Perform the lookup, merge, and filter\n",
+    "final_df = lookup_and_merge(file1_path, file2_path, vOld_path)\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(final_df)\n",
+    "\n",
+    "# Save the final DataFrame to a new Excel file\n",
+    "final_df.to_excel('path_to_output_file.xlsx', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2753de6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bceda7e7",
+   "id": "d1bd43c2",
    "metadata": {},
    "outputs": [],
    "source": []
