--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,8 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "32917012",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Staff ID                          Control Items Position Changed  \\\n",
+      "0         1  Issue 101 A\\nIssue 102 B\\nIssue 104 D              Yes   \n",
+      "1         2             Action 103 C\\nAction 105 E              Yes   \n",
+      "\n",
+      "              Record Details  \n",
+      "0  Detail1\\nDetail2\\nDetail4  \n",
+      "1           Detail3\\nDetail5  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample data creation for demonstration\n",
+    "data = {\n",
+    "    'Record Type': ['Issue', 'Issue', 'Action', 'Issue', 'Action'],\n",
+    "    'Record ID': [101, 102, 103, 104, 105],\n",
+    "    'Record Name': ['A', 'B', 'C', 'D', 'E'],\n",
+    "    'Record Details': ['Detail1', 'Detail2', 'Detail3', 'Detail4', 'Detail5'],\n",
+    "    'Staff ID': [1, 1, 2, 1, 2],\n",
+    "    'Position Changed': ['Yes', 'No', 'Yes', 'No', 'Yes']\n",
+    "}\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Define a function to concatenate the desired fields\n",
+    "def concatenate_records(group):\n",
+    "    return '\\n'.join(group['Record Type'] + ' ' + group['Record ID'].astype(str) + ' ' + group['Record Name'])\n",
+    "\n",
+    "# Group by 'Staff ID' and apply the concatenation function\n",
+    "grouped_df = df.groupby('Staff ID').apply(lambda x: pd.Series({\n",
+    "    'Control Items': concatenate_records(x),\n",
+    "    'Position Changed': x['Position Changed'].iloc[0]  # Assuming you want to keep the first 'Position Changed' value\n",
+    "})).reset_index()\n",
+    "\n",
+    "# Optional: Include any other columns you want to keep from the original DataFrame\n",
+    "# For demonstration, I'm adding 'Record Details' concatenated in the same way\n",
+    "grouped_df['Record Details'] = df.groupby('Staff ID')['Record Details'].apply(lambda x: '\\n'.join(x)).reset_index(drop=True)\n",
+    "\n",
+    "# Display the final DataFrame\n",
+    "print(grouped_df)\n",
+    "\n",
+    "# Save the final DataFrame to an Excel file\n",
+    "# grouped_df.to_excel('path_to_output_file.xlsx', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "eda552e4",
+   "id": "5e2ab357",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2753de6",
+   "id": "0d66586d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1bd43c2",
+   "id": "837c5123",
    "metadata": {},
    "outputs": [],
    "source": []
