--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,6 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "818cefda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Humans file: C:/Users/KS/Start-Data-Analysis.xlsx\n",
+      "Animals file: C:/Users/KS/Source.xlsx\n",
+      "Plants file: C:/Users/KS/sample.xlsx\n",
+      "Minerals file: C:/Users/KS/sam.xlsx\n",
+      "Microbes file: C:/Users/KS/sf2_output.xlsx\n",
+      "Fungi file: C:/Users/KS/modified_workbook1.xlsx\n",
+      "Algae file: C:/Users/KS/modified_workbook.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, messagebox\n",
+    "\n",
+    "class ExcelSheetSelector:\n",
+    "    def __init__(self, root):\n",
+    "        self.root = root\n",
+    "        self.root.title(\"Excel Sheet Selector\")\n",
+    "\n",
+    "        self.file_paths = [None] * 7\n",
+    "        self.labels = []\n",
+    "\n",
+    "        # Specific labels for each file selection\n",
+    "        self.label_texts = [\n",
+    "            \"Select Humans file:\",\n",
+    "            \"Select Animals file:\",\n",
+    "            \"Select Plants file:\",\n",
+    "            \"Select Minerals file:\",\n",
+    "            \"Select Microbes file:\",\n",
+    "            \"Select Fungi file:\",\n",
+    "            \"Select Algae file:\"\n",
+    "        ]\n",
+    "\n",
+    "        # Create labels and buttons for 7 Excel sheets\n",
+    "        for i in range(7):\n",
+    "            label = tk.Label(root, text=self.label_texts[i])\n",
+    "            label.grid(row=i, column=0, padx=10, pady=5)\n",
+    "            \n",
+    "            button = tk.Button(root, text=\"Browse\", command=lambda i=i: self.select_file(i))\n",
+    "            button.grid(row=i, column=1, padx=10, pady=5)\n",
+    "            \n",
+    "            file_label = tk.Label(root, text=\"No file selected\")\n",
+    "            file_label.grid(row=i, column=2, padx=10, pady=5)\n",
+    "            self.labels.append(file_label)\n",
+    "        \n",
+    "        # Button to check and print selected file paths\n",
+    "        self.print_button = tk.Button(root, text=\"Confirm Selections\", command=self.check_and_confirm)\n",
+    "        self.print_button.grid(row=7, column=0, columnspan=3, pady=10)\n",
+    "\n",
+    "    def select_file(self, index):\n",
+    "        self.root.withdraw()  # Hide the main window\n",
+    "        file_path = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx *.xls\")])\n",
+    "        self.root.deiconify()  # Show the main window again\n",
+    "        if file_path:\n",
+    "            self.file_paths[index] = file_path\n",
+    "            self.labels[index].config(text=file_path)\n",
+    "\n",
+    "    def check_and_confirm(self):\n",
+    "        if all(self.file_paths):\n",
+    "            self.root.destroy()  # Close the window gracefully\n",
+    "        else:\n",
+    "            messagebox.showwarning(\"Warning\", \"Please select all files before proceeding.\")\n",
+    "\n",
+    "# Create the main window\n",
+    "root = tk.Tk()\n",
+    "app = ExcelSheetSelector(root)\n",
+    "root.mainloop()\n",
+    "\n",
+    "# After closing the window, capture the file paths into separate variables\n",
+    "humans_file, animals_file, plants_file, minerals_file, microbes_file, fungi_file, algae_file = app.file_paths\n",
+    "\n",
+    "# Print the captured file paths (for verification)\n",
+    "print(f\"Humans file: {humans_file}\")\n",
+    "print(f\"Animals file: {animals_file}\")\n",
+    "print(f\"Plants file: {plants_file}\")\n",
+    "print(f\"Minerals file: {minerals_file}\")\n",
+    "print(f\"Microbes file: {microbes_file}\")\n",
+    "print(f\"Fungi file: {fungi_file}\")\n",
+    "print(f\"Algae file: {algae_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "32917012",
    "metadata": {},
